--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ streamlit==1.50.0
 sympy==1.13.3
 tenacity==9.1.2
 toml==0.10.2
-torch==2.8.0+cpu
+torch==2.9.0
 torchaudio==2.8.0+cpu
 torchvision==0.23.0+cpu
 tornado==6.5.2
