--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 streamlit==1.38.0
-torch==2.3.0
-torchvision==0.18.0
-Pillow==10.3.0
+torch==2.2.2
+torchvision==0.17.2
+pillow==10.3.0
 numpy==1.26.4
 pandas==2.2.2
-matplotlib==3.9.1
+requests==2.32.3
 scikit-learn==1.5.2
 scipy==1.13.1
-requests==2.32.3
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-rich==13.7.1
+jinja2==3.1.4
 altair==5.3.0
 fsspec==2024.3.1
 blinker==1.7.0
+rich==13.7.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
