--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ sympy==1.13.3
 tenacity==9.1.2
 toml==0.10.2
 tomlkit==0.13.3
-torch==2.8.0+cpu
+torch==2.9.0
 torchaudio==2.8.0+cpu
 torchvision==0.23.0+cpu
 tornado==6.5.2
