--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,16 @@
-streamlit==1.50.0
-rich==14.2.0
-markdown-it-py==4.0.0
+streamlit==1.38.0
+torch==2.2.2
+torchvision==0.17.2
+pillow==10.3.0
+numpy==1.26.4
+pandas==2.2.2
+requests==2.32.3
+scikit-learn==1.5.2
+scipy==1.13.1
+jinja2==3.1.4
+altair==5.3.0
+fsspec==2024.3.1
+blinker==1.7.0
+rich==13.7.1
+markdown-it-py==3.0.0
 mdurl==0.1.2
-pygments==2.19.2
-altair==5.5.0
-astroid==3.3.11
-attrs==25.4.0
-audioop-lts==0.2.2
-autoflake==2.3.1
-autopep8==2.3.2
-beautifulsoup4==4.14.2
-better-exceptions==0.3.3
-black==25.1.0
-blinker==1.9.0
-cachetools==6.2.0
-certifi==2025.10.5
-chardet==3.0.4
-charset-normalizer==3.4.3
-click==8.1.8
-colorama==0.4.6
-deep-translator==1.11.4
-dill==0.4.0
-filelock==3.13.1
-flake8==7.3.0
-Flask==3.1.2
-flask-cors==6.0.1
-fsspec==2024.6.1
-gitdb==4.0.12
-GitPython==3.1.45
-googletrans==4.0.0rc1
-gTTS==2.5.4
-h11==0.9.0
-h2==3.2.0
-hpack==3.0.0
-hstspreload==2025.1.1
-httpcore==0.9.1
-httpx==0.13.3
-hyperframe==5.2.0
-idna==2.10
-isort==6.0.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-MarkupSafe==3.0.3
-mccabe==0.7.0
-mpmath==1.3.0
-mypy==1.17.1
-mypy_extensions==1.1.0
-narwhals==2.7.0
-networkx==3.3
-numpy==2.3.3
-packaging==25.0
-pandas==2.3.3
-pathspec==0.12.1
-pillow==11.3.0
-platformdirs==4.3.8
-protobuf==6.32.1
-pyarrow==21.0.0
-PyAudio==0.2.14
-pycodestyle==2.14.0
-pydeck==0.9.1
-pyflakes==3.4.0
-pylint==3.3.8
-python-dateutil==2.9.0.post0
-pytz==2025.2
-referencing==0.36.2
-requests==2.32.5
-rfc3986==1.5.0
-rpds-py==0.27.1
-setuptools==70.2.0
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.8
-SpeechRecognition==3.14.3
-standard-aifc==3.13.0
-standard-chunk==3.13.0
-streamlit==1.50.0
-sympy==1.13.3
-tenacity==9.1.2
-toml==0.10.2
-tomlkit==0.13.3
-torch==2.9.0
-torchaudio==2.8.0+cpu
-torchvision==0.23.0+cpu
-tornado==6.5.2
-typing_extensions==4.14.1
-tzdata==2025.2
-urllib3==2.5.0
-watchdog==6.0.0
-Werkzeug==3.1.3
